--- a/Jerrybaring1/Jerrybaring1/Jerrybaring1.csproj
+++ b/Jerrybaring1/Jerrybaring1/Jerrybaring1.csproj
@@ -29,6 +29,7 @@
     <None Remove="Assets\Ghana\GHANACHOCOLATE.OTF" />
     <None Remove="Assets\Pre\PRETENDARD-BOLD.TTF" />
     <None Remove="Assets\Pre\PRETENDARDVARIABLE.TTF" />
+    <None Remove="Assets\Resources\menu.svg" />
     <None Remove="Views\NewFile1.txt" />
   </ItemGroup>
 
@@ -39,5 +40,6 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+    <PackageReference Include="Live.Avalonia" Version="1.4.1" />
   </ItemGroup>
 </Project>
