--- a/Jerrybaring1/Jerrybaring1/Jerrybaring1.csproj
+++ b/Jerrybaring1/Jerrybaring1/Jerrybaring1.csproj
@@ -35,11 +35,13 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="11.1.0" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="$(AvaloniaVersion)" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="$(AvaloniaVersion)" />    
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
-    <PackageReference Include="Live.Avalonia" Version="1.4.1" />
+    <PackageReference Include="HotAvalonia" Version="1.1.1" />
+    <PackageReference Include="HotAvalonia.Extensions" Version="1.1.1" />
   </ItemGroup>
 </Project>
