--- a/Jerrybaring1/Jerrybaring1/Jerrybaring1.csproj
+++ b/Jerrybaring1/Jerrybaring1/Jerrybaring1.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
-    <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+    <AvaloniaUseCompiledBindingsByDefault>false</AvaloniaUseCompiledBindingsByDefault>
   </PropertyGroup>
   
   <ItemGroup>
@@ -13,16 +13,12 @@
   <ItemGroup>
     <AvaloniaXaml Remove="Font\**" />
     <AvaloniaXaml Remove="NewFolder1\**" />
-    <AvaloniaXaml Remove="NewFolder\**" />
     <Compile Remove="Font\**" />
     <Compile Remove="NewFolder1\**" />
-    <Compile Remove="NewFolder\**" />
     <EmbeddedResource Remove="Font\**" />
     <EmbeddedResource Remove="NewFolder1\**" />
-    <EmbeddedResource Remove="NewFolder\**" />
     <None Remove="Font\**" />
     <None Remove="NewFolder1\**" />
-    <None Remove="NewFolder\**" />
   </ItemGroup>
   
   <ItemGroup>
@@ -56,6 +52,12 @@
   <ItemGroup>
     <Compile Update="IconButton.axaml.cs">
       <DependentUpon>IconButton.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\LineContentView.axaml.cs">
+      <DependentUpon>LineContentView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\TalkView.axaml.cs">
+      <DependentUpon>TalkView.axaml</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
